<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="login"
            type="ballidaku.mywallet.frontScreens.LoginActivity"/>

        <variable
            name="handlers"
            type="ballidaku.mywallet.frontScreens.LoginActivity.MyClickHandlers" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fillViewport="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chango"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_30sdp"/>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                card_view:cardCornerRadius="@dimen/_8sdp"
                card_view:contentPadding="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            app:srcCompat="@drawable/ic_email"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextViewTheme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                />

                            <EditText
                                android:id="@+id/editTextEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:background="@android:color/transparent"
                                android:hint="@string/enter_email"
                                android:inputType="textEmailAddress"
                                android:text=""
                                android:theme="@style/EditTextTheme"/>

                        </LinearLayout>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:src="@drawable/ic_divider"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            app:srcCompat="@drawable/ic_password"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextViewTheme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/password"/>

                            <EditText
                                android:id="@+id/editTextPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:background="@android:color/transparent"
                                android:hint="@string/enter_password"
                                android:inputType="textPassword"
                                android:text=""
                                android:theme="@style/EditTextTheme"/>

                        </LinearLayout>


                        <TextView
                            android:id="@+id/textViewForgotPassword"
                            style="@style/TextViewTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:onClick="@{handlers::onForgotClicked}"
                            android:padding="@dimen/_2sdp"
                            android:text="@string/forgot"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:src="@drawable/ic_divider"/>

                    <TextView
                        android:id="@+id/textViewSignIn"
                        style="@style/TextViewTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/selector_sign_in"
                        android:clickable="true"
                        android:elevation="5dp"
                        android:gravity="center"
                        android:onClick="@{handlers::onSignInClicked}"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/signin"
                        android:textSize="18sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/paytone_one"
                            android:gravity="center"
                            android:text="@string/dont_have_account"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/textViewSignUp"
                            style="@style/TextViewTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:gravity="center"
                            android:text="@string/signup"
                            android:onClick="@{handlers::onSignUpClicked}"
                            android:textSize="@dimen/_10sdp"
                            android:textStyle="bold"/>


                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>
</layout>

