<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="ballidaku.mywallet.viewModel.SettingFragmentViewModel" />


    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayBackground"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="25dp"
            android:onClick="@{viewModel::onChangeLoginPasswordClicked}"
            app:cardBackgroundColor="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:text="@string/change_login_password"
                android:textSize="@dimen/heading"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorWhite"/>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="25dp"
            android:onClick="@{viewModel::onChangePasscodeClicked}"
            app:cardBackgroundColor="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:text="@string/change_passcode"
                android:textSize="@dimen/heading"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorWhite"/>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            app:cardElevation="2dp"
            android:onClick="@{viewModel::onExportDataToOtherClicked}"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:text="@string/export_data_to_other_apps"
                android:textSize="@dimen/heading"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            app:cardElevation="2dp"
            android:onClick="@{viewModel::onExportDataToLocalStorageClicked}"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:text="@string/export_data_to_local"
                android:textSize="@dimen/heading"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            app:cardElevation="2dp"
            android:onClick="@{viewModel::onImportDataClicked}"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:text="@string/import_data"
                android:textSize="@dimen/heading"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            app:cardElevation="2dp"
            android:onClick="@{viewModel::onSignOutClicked}"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:text="@string/sign_out"
                android:textSize="@dimen/heading"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
        </android.support.v7.widget.CardView>


    </LinearLayout>

</layout>
